# LuckyPot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  STACKCOIN_PYTHON.md  alembic.ini  compose.yml  config.py  db.py  justfile  lucky_pot.py  pyproject.toml  stk.py
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_rounds.py
docs/plans/: 2026-03-04-discord-bot-layer.md  2026-03-14-payment-denial-ban.md  2026-06-22-daily-draw-reentry.md
docs/superpowers/plans/: 2026-04-04-auto-enter.md
docs/superpowers/specs/: 2026-04-04-auto-enter-design.md
luckypot/: __init__.py  config.py  db.py  game.py  gateway.py  stk.py  types.py
luckypot/discord/: __init__.py  bot.py  commands.py  scheduler.py  ui.py
