[project]
name = "luckypot"
version = "0.1.0"
description = "LuckyPot is a bot that implements a lottery system on top of StackCoin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hikari>=2.3.5",
    "hikari-lightbulb>=3.1.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.0",
    "stackcoin>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luckypot"]
